--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,24 +3,24 @@ pipeline {
     stages {
         stage('git repo & clean') {
             steps {
-                bat "rmdir  /s /q demo-springboot-docker"
+                // bat "rmdir  /s /q demo-springboot-docker1"
                 bat "git clone https://github.com/AhlamSd/demo-springboot-docker.git"
-                bat "mvn clean -f demo-springboot-docker"
+                bat "mvn clean -f demo-springboot-docker1"
             }
         }
         stage('install') {
             steps {
-                bat "mvn install -f demo-springboot-docker"
+                bat "mvn install -f demo-springboot-docker1"
             }
         }
         stage('test') {
             steps {
-                bat "mvn test -f demo-springboot-docker"
+                bat "mvn test -f demo-springboot-docker1"
             }
         }
         stage('package') {
             steps {
-                bat "mvn package -f demo-springboot-docker"
+                bat "mvn package -f demo-springboot-docker1"
             }
         }
     }
